fix: fe navbar noti alignment

--- a/frontend/src/app/ui/components/navbar/navbar.component.scss
+++ b/frontend/src/app/ui/components/navbar/navbar.component.scss
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  align-items: center;
 }
 
 .btn-notification {
